--- a/menutoggle.css
+++ b/menutoggle.css
@@ -7,6 +7,11 @@
 $(".menu-toggle").click(function() {
       $(this).toggleClass("on");
       $(".navbar").slideToggle();
+      
+    /*$(".navbar").animate({
+            width: "toggle"
+      }); */
+      
 });
 
 .menu-toggle {
